kubernetes/apps/minio/minio/tenant/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-tenant-console
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.toskbot.xyz`)
      kind: Rule
      services:
        - name: minio1-console
          port: https-console
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: s3.toskbot.xyz
